--- a/index.html
+++ b/index.html
@@ -19,15 +19,15 @@
       <h1>Introduction</h1>
       <p>I am Just a student who like to learn</p>
       <h1>Where I'm From</h1>
-      <p>Details here...</p>
+      <p>Myanmar</p>
       <h1>What are your favorite hobbies?</h1>
-      <p>Details here...</p>
+      <p>I love reading </p>
       <h1>What's your dream job?</h1>
-      <p>Details here...</p>
+      <p>to become my own boss</p>
       <h1>Where do you live?</h1>
-      <p>Details here...</p>
+      <p>I live in perth</p>
       <h1>Why do you want to be a web developer?</h1>
-      <p>Details here...</p>
+      <p>to be able to create my own website and help other to create their own</p>
     </section>
 
     <footer id="footer">
